--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -87,3 +87,11 @@
     visibility: visible;
     opacity: 1;
   }
+  /* Add this to your CSS */
+.icon-card p {
+    height: 2.5rem; /* Fixed height for 1-2 lines */
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* Limit to 2 lines */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
