--- a/lib/icons_lv_draft_web/components/layouts/root.html.heex
+++ b/lib/icons_lv_draft_web/components/layouts/root.html.heex
@@ -32,6 +32,12 @@
               </svg>
               Upload
             </a>
+            <a href="/svg-analyzer" class="hover:underline flex items-center">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4" />
+              </svg>
+              SVG Analyzer
+            </a>
             <a href="https://github.com/yourusername/icons_lv" class="hover:underline" target="_blank">GitHub</a>
             <a href="/docs" class="hover:underline">Documentation</a>
           </div>
